--- a/assets/main.scss
+++ b/assets/main.scss
@@ -76,3 +76,20 @@ a {
 .hello {
   text-align: center;
 }
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: var(--clr-dark);
+    --foreground: var(--clr-light);
+    --clr-darkmode: var(--clr-accent);
+  }
+
+  img {
+    opacity: .75;
+    transition: opacity .5s ease-in-out;
+  }
+
+  img:hover {
+    opacity: 1;
+  }
+}
